--- a/scrimba-js/index.html
+++ b/scrimba-js/index.html
@@ -12,7 +12,9 @@
     <div>
         <h2>Counter: </h2>
         <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">Add</button>
+        <button id="increment-btn" onclick="increment()">Increment</button>
+        <button id="decrement-btn" onclick="decrement()">Decrement</button>
+
     </div>
     
 </body>
