save results and display in DOM

--- a/scrimba-js/index.html
+++ b/scrimba-js/index.html
@@ -13,8 +13,9 @@
         <h2>Counter: </h2>
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">Increment</button>
-        <button id="decrement-btn" onclick="decrement()">Decrement</button>
-
+        <!-- <button id="decrement-btn" onclick="decrement()">Decrement</button> -->
+        <button id="save-btn" onclick="save()">Save</button>
+        <h3 id="saved-el">All counts: </h3>
     </div>
     
 </body>
