update count on save. clear all on reset

--- a/scrimba-js/index.html
+++ b/scrimba-js/index.html
@@ -16,6 +16,7 @@
         <!-- <button id="decrement-btn" onclick="decrement()">Decrement</button> -->
         <button id="save-btn" onclick="save()">Save</button>
         <h3 id="saved-el">All counts: </h3>
+        <button id="reset-btn" onclick="clearAll()">reset</button>
     </div>
     
 </body>
