--- a/scrimba-js/index.html
+++ b/scrimba-js/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Scrimba JS lessons</h1>
-    <div>
+    <div id="container">
         <h2>Counter: </h2>
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">Increment</button>
@@ -22,4 +22,8 @@
 </body>
 
 <script src="main.js"></script>
+<footer>&copy2023 <a href="https://dashagaytan.netlify.app/">Dasha Gaytan</a> | 
+    <a href="https://www.linkedin.com/in/dasha-gaytan/" target="_black">LinkedIn</a> | 
+    <a>Credits: Scrimba</a>
+ </footer>
 </html>
