--- a/black-jack/index.html
+++ b/black-jack/index.html
@@ -13,6 +13,7 @@
     <p id="message-el">Want to play a round?</p>
     <p>Cards:</p>
     <p>Sum:</p>
+    <button onclick="startGame()">Start Game</button>
     <script src="index.js"></script>
 </body>
 
